# jpeg-mpeg-visualizer

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md
.github/workflows/: deploy_to_netlify.yaml  pipeline.yaml
benches/: mpeg.rs
src/: bench.rs  block.rs  dct.rs  image.rs  lib.rs  page.rs  pixel.rs  quant.rs
src/codec/: mod.rs
src/codec/g711/: alaw.rs  codec.rs  mod.rs  ulaw.rs
src/graphic_helpers/: drag_n_drop.rs  mod.rs
src/page/: jpeg_visualization.rs
src/page/jpeg_visualization/: drawing_utils.rs  model.rs  page.rs  utils.rs  view.rs
src/page/mpeg_visualization/: mod.rs  mpeg1.rs  page.rs  renderer.rs  ts.rs
src/section/: jpeg_visualization.rs  mod.rs
src/section/g711_visualization/: audio_visualizer_template.rs  file_chooser_template.rs  loading_spinner_template.rs  mod.rs  model.rs  page.rs  spectrogram.rs  utils.rs
src/section/jpeg_visualization/: drawing_utils.rs  model.rs  page.rs  subsampling_tests.rs  utils.rs  view.rs
src/section/mpeg_visualization/: mod.rs  model.rs  mpeg1.rs  page.rs  renderer.rs  ts.rs  view.rs
www/: index.html
www/public/: style.css
www/public/preset_videos/: bbb_720_b.ts
