[package]
name = "jpeg-visualizer"
version = "0.1.0"
authors = ["Konrad Bochnia <kbochnia@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.73"
once_cell = "1.7.2"
console_error_panic_hook = "0.1.6"
seed = "0.8.0"
gloo-file = "0.1.0"
gloo-events = "0.1.1"
bitvec = "0.22.3"
strum = "0.22.0"
strum_macros = "0.22"

#plots support
plotters = "0.3.1"
plotters-canvas = "0.3.0"

[dependencies.web-sys]
version = "0.3.50"
features = [
    "Window",
    "Document",
    "DomRect",
    "HtmlElement",
    "Element",
    "File",
    "FileReader",
    "HtmlImageElement",
    "ProgressEvent",
    "ImageData",
    "CanvasRenderingContext2d",
    "AudioContext",
    "AudioBuffer",
    "HtmlCanvasElement",
    "HtmlAudioElement",
    "HtmlMediaElement",
    "AudioContextOptions",
    "OfflineAudioContext",
    "HtmlButtonElement",
    "OffscreenCanvas",
    "AudioBufferSourceNode",
    "GainNode",
    "AudioDestinationNode",
    "HtmlDivElement" ]